Including JPA and Student CRUD operations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,18 @@
 #cxf.jaxrs.component-scan=true
 cxf.jaxrs.classes-scan=true
 cxf.jaxrs.classes-scan-packages=org.codehaus.jackson.jaxrs,com.example.restws
-server.context-path=/restws
+#server.context-path=/restws
+server.servlet.context-path=/restws
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/testDB
+spring.datasource.username=postgres
+spring.datasource.password=000000
+
+# Disable feature detection by this undocumented parameter. Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details.
+#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+
+# Because detection is disabled you have to set correct dialect by hand.
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
