Implementing configurations for JPA, Hibernate and Spring boot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,25 @@
-#cxf.jaxrs.component-scan=true
 cxf.jaxrs.classes-scan=true
-cxf.jaxrs.classes-scan-packages=org.codehaus.jackson.jaxrs,com.example.restws
-#server.context-path=/restws
+cxf.jaxrs.classes-scan-packages=org.codehaus.jackson.jaxrs,com.example.restws,com.example.restws.entity,com.example.restws.service,com.example.restws.service.impl
 server.servlet.context-path=/restws
+
+spring.jpa.database=POSTGRESQL
+spring.jpa.show-sql=false
+hibernate.format_sql=true
+hibernate.hbm2ddl.auto=validate
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
+
+spring.datasource.platform=postgres
+spring.database.driverClassName=org.postgresql.Driver
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/testDB
 spring.datasource.username=postgres
 spring.datasource.password=000000
 
 # Disable feature detection by this undocumented parameter. Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details.
-#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 # Because detection is disabled you have to set correct dialect by hand.
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
-
+spring.data.jpa.repositories.enabled=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
